syntax = "proto3";

package configuration;

import "aelf/core.proto";
import "google/protobuf/wrappers.proto";
import "acs1.proto";

option csharp_namespace = "AElf.Contracts.Configuration";

service Configuration {
    option (aelf.csharp_state) = "AElf.Contracts.Configuration.ConfigurationState";
    option (aelf.base) = "acs1.proto";
    // Actions
    rpc SetBlockTransactionLimit (google.protobuf.Int32Value) returns (google.protobuf.Empty) {
    }
    rpc ChangeOwnerAddress (aelf.Address) returns (google.protobuf.Empty) {
    }
    // Views
    rpc GetBlockTransactionLimit (google.protobuf.Empty) returns (google.protobuf.Int32Value) {
        option (aelf.is_view) = true;
    }
    rpc GetOwnerAddress (google.protobuf.Empty) returns (aelf.Address) {
        option (aelf.is_view) = true;
    }
}

// Events
message BlockTransactionLimitChanged {
    option (aelf.is_event) = true;
    int32 old = 1;
    int32 new = 2;
}
